healthinsurance.org (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2408,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 11.13,
  "homepage_snapshot_redirected_domain": "healthinsurance.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930162359id_/http://www.healthinsurance.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930162359id_/http%3A//healthinsurance.org",
  "interval": "2007_B",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "healthinsurance.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231131538id_/http%3A//www.healthinsurance.org/privacypolicy.lasso",
  "policy_title": "The privacy policy of the Health Insurance Resource Center",
  "policy_url": "healthinsurance.org/privacypolicy.lasso",
  "sha1": "2b862e70ce0a8c5ac85d9733a6af18508d63671d",
  "simhash": 13347134662378580253,
  "simhash_updated": false,
  "site_hostname": "healthinsurance.org",
  "site_url": "http://healthinsurance.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071231131538",
  "word_count": 411,
  "year": 2007
}

--- a/h/he/hea/healthinsurance.org.html
+++ b/h/he/hea/healthinsurance.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the healthinsurance.org privacy policy that was archived on 2007-02-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070208234524id_/http%3A//www.healthinsurance.org/privacypolicy.lasso) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the healthinsurance.org privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231131538id_/http%3A//www.healthinsurance.org/privacypolicy.lasso) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8">
@@ -69,7 +69,7 @@
 									<div class="sidelinks" align="left">
 										<p> <a href="/insterms.lasso">Glossary | </a><a href="/consumertips.lasso">Purchasing tips</a><br>
 											<a href="/riskpoolinfo.lasso">Risk pool resources</a><br>
-											<a href="/self-employed.lasso">Self-employed FAQs<br>
+											<a href="/self-employed.lasso">Self-employed health insurance<br>
 											</a><a href="/questions.lasso">General FAQs</a><br>
 											<a href="/00-50waystableofcontents.lasso">Reducing health care costs</a><br>
 											<br>
@@ -108,9 +108,10 @@ Enter ZIP Code:<br>
 											<a href="/illinois/">Illinois</a><br>
 <a href="/indiana/">Indiana</a><br>
 <a href="/kentucky/">Kentucky</a><br>
-<a href="/louisiana/">Louisiana</a><br>
+<a href="/louisiana/">Louisiana</a><br><a href="/Maryland/">Maryland</a><br>
 											<a href="/michigan/">Michigan</a><br>
 											<a href="/minnesota/">Minnesota</a><br>
+<a href="/missouri/">Missouri</a><br>
 <a href="/nevada/">Nevada</a><br>
 											<a href="/new_jersey/">New Jersey</a><br>
 											<a href="/new_york/">New York</a><br>
