gamecareerguide.com (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 15085,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.17,
  "homepage_snapshot_redirected_domain": "gamecareerguide.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001212037id_/http://www.gamecareerguide.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001212037id_/http%3A//gamecareerguide.com",
  "interval": "2007_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "gamecareerguide.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231151026id_/http%3A//www.gamecareerguide.com/policy",
  "policy_title": "GameCareerGuide.com",
  "policy_url": "gamecareerguide.com/policy",
  "sha1": "98f62d379c17a8b48b1d3dca9d27873fb705c2c4",
  "simhash": 7944686554676855584,
  "simhash_updated": false,
  "site_hostname": "gamecareerguide.com",
  "site_url": "http://gamecareerguide.com",
  "smog": 15.95,
  "strict_updated": false,
  "timestamp": "20071231151026",
  "word_count": 2382,
  "year": 2007
}

--- a/g/ga/gam/gamecareerguide.com.html
+++ b/g/ga/gam/gamecareerguide.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gamecareerguide.com privacy policy that was archived on 2007-05-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070506033708id_/http%3A//www.gamecareerguide.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gamecareerguide.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231151026id_/http%3A//www.gamecareerguide.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -37,8 +37,9 @@ function MM_swapImage() { //v3.0
 }
 //-->
 </script>
+
 </head>
-<body onload="MM_preloadImages('http://www.gamecareerguide.com/img/news_on.jpg','http://www.gamecareerguide.com/img/features_on.jpg','http://www.gamecareerguide.com/img/schools_on.jpg','http://www.gamecareerguide.com/img/jobs_on.jpg','http://www.gamecareerguide.com/img/community_on.jpg','http://www.gamecareerguide.com/img/store_on.jpg','http://www.gamecareerguide.com/img/getstarted_over.jpg','http://www.gamecareerguide.com/img/contactus_on.gif')">
+<body onload="MM_preloadImages('http://www.gamecareerguide.com/img/news_on.jpg','http://www.gamecareerguide.com/img/features_on.jpg','http://www.gamecareerguide.com/img/schools_on.jpg','http://www.gamecareerguide.com/img/jobs_on.jpg','http://www.gamecareerguide.com/img/community_on.jpg','http://www.gamecareerguide.com/img/store_on.jpg','http://www.gamecareerguide.com/img/getstarted_over.jpg','http://www.gamecareerguide.com/img/contactus_on.gif', 'http://www.gamecareerguide.com/img/advertise_on.gif')">
 
 <!-- -->
 
@@ -61,7 +62,7 @@ function MM_swapImage() { //v3.0
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://qs1183.pair.com/gdconf/phpadsnew/adjs.php?n=605168715&amp;what=zone:41&amp;source=CareerGuide&amp;target=_blank&amp;block=1&amp;blockcampaign=1&amp;exclude=,"></script><noscript><a href='http://qs1183.pair.com/gdconf/phpadsnew/adclick.php?n=ab7f83cc' target='_blank'><img src='http://qs1183.pair.com/gdconf/phpadsnew/adview.php?what=zone:41&amp;source=CareerGuide&amp;n=ab7f83cc' border='0' alt='' /></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://qs1183.pair.com/gdconf/phpadsnew/adjs.php?n=322943782&amp;what=zone:41&amp;source=CareerGuide&amp;target=_blank&amp;block=1&amp;blockcampaign=1&amp;exclude=,"></script><noscript><a href='http://qs1183.pair.com/gdconf/phpadsnew/adclick.php?n=ab7f83cc' target='_blank'><img src='http://qs1183.pair.com/gdconf/phpadsnew/adview.php?what=zone:41&amp;source=CareerGuide&amp;n=ab7f83cc' border='0' alt='' /></a></noscript>
 </div></td>
 			<td rowspan="2" valign="top">
 			<div class="banner160">
@@ -79,16 +80,40 @@ function MM_swapImage() { //v3.0
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://qs1183.pair.com/gdconf/phpadsnew/adjs.php?n=753749560&amp;what=zone:5&amp;source=careerguide&amp;target=_blank&amp;block=1&amp;blockcampaign=1&amp;exclude=,"></script><noscript><a href='http://qs1183.pair.com/gdconf/phpadsnew/adclick.php?n=a0e99f34' target='_blank'><img src='http://qs1183.pair.com/gdconf/phpadsnew/adview.php?what=zone:5&amp;source=careerguide&amp;n=a0e99f34' border='0' alt='' /></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://qs1183.pair.com/gdconf/phpadsnew/adjs.php?n=645311263&amp;what=zone:5&amp;source=careerguide&amp;target=_blank&amp;block=1&amp;blockcampaign=1&amp;exclude=,"></script><noscript><a href='http://qs1183.pair.com/gdconf/phpadsnew/adclick.php?n=a0e99f34' target='_blank'><img src='http://qs1183.pair.com/gdconf/phpadsnew/adview.php?what=zone:5&amp;source=careerguide&amp;n=a0e99f34' border='0' alt='' /></a></noscript>
 </div>			
 			</td>
 		</tr>
 		<tr>
 			<td valign="top" width="162" style="text-align: center;">
 				<div class="lefttilewrapper">
-	<a href="http://store.cmpgame.com/product.php?id=2420&amp;cat=18&amp;skin=gdmag" target="_blank"><img src="http://www.gamecareerguide.com/img/fpo_adtile.jpg" alt="Get Your Digital Subscription to Game Career Guide"></a>
-</div>		
-			</td>
+	<a href="http://www.gamecareerseminar.com" target="_blank"><img src="http://www.gamecareerguide.com/img/gcs_adtile.gif" alt="Register Today for Game Career Seminar"></a><br><br>
+	<a href="http://store.cmpgame.com/product.php?id=2422&amp;cat=18&amp;skin=gdmag" target="_blank"><img src="http://www.gamecareerguide.com/img/fpo_adtile.jpg" alt="Get Your Digital Subscription to Game Career Guide"></a>
+	<br>
+	<br>
+</div>
+	
+<!-- Jbox start here -->
+
+<center>
+<img src="http://www.gamecareerguide.com/flash_config/img/mediapartners/mediapartners.gif" border="0" alt="media partners" usemap="topmedia"><br><div id="blend_images" style="background-color: white; width:146px; height:75px;">&nbsp;
+</div>
+<img src="http://www.gamecareerguide.com/flash_config/img/mediapartners/allpartners.gif" border="0" usemap="#bottomallpartners" alt="all partners">
+<script type="text/javascript" src="http://www.gamecareerguide.com/javascript_config/jboxlinks.js"></script>
+<script type="text/javascript" src="http://www.gamecareerguide.com/javascript_config/blendimages.js"></script>
+<map name="bottomallpartners">
+<area shape="rect" coords="77, 6, 135, 16" href="http://www.gamecareerguide.com/mediapartners/">
+</map>
+</center>
+
+<!-- Jbox end here -->
+	
+
+<br>
+<br>
+<a href="http://www.gamasutra.com/xna/"><img src="/img/XNA_146x60.gif" border="0">
+		
+			</a></td>
 			<td valign="top" width="665">
 									<!-- start top -->
 					<!-- TOP NAV BEGINS -->
@@ -109,9 +134,10 @@ function MM_swapImage() { //v3.0
 <input type="hidden" name="cof" value="GALT:#9A2C06;GL:1;DIV:#33FFFF;VLC:D03500;AH:center;BGC:99CCFF;LBGC:CCE5F9;ALC:440066;LC:440066;T:336699;GFNT:223472;GIMP:223472;LH:100;LW:83;L:http://www.gamasutra.com/careerguide/gcg-100.jpg;S:http://www.gamecareerguide.com;LP:1;FORID:1">
 <input type="hidden" name="hl" value="en">
 </form>
-</div></td><td valign="top" style="color:#fff;text-align:right;"><form method="post" action="http://mailcenter.newmediagateway.com/cmp/main/index.php?action=ext_subnewsletter" name="subscribe_form">
-						Get the latest Education e-News &nbsp; &nbsp;<input type="text" class="searchinput" id="email" name="contact[email]" onfocus="javascript:this.value = ''" size="20" value="enter email address">
+</div></td><td valign="top" style="color:#fff;text-align:right;"><form method="post" action="http://www.gamasutra.com/newsletter/" name="subscribe_form">
+						Get the latest Education e-News &nbsp; &nbsp;<input type="text" class="searchinput" id="email" name="email" onfocus="javascript:this.value = ''" size="20" value="enter email address">
 				     <input name="newsletter[11]" type="hidden" id="newsletter[11]" value="11">
+					 <input type="hidden" name="lg_gamecareerguide" value="1">
 				     <input type="hidden" name="redirect" value="http://www.gamasutra.com/post-newsletter-join.htm">
 				     <input type="submit" class="searchbutton" name="submit" value="sign up">
                 </form></td></tr>
@@ -128,7 +154,8 @@ function MM_swapImage() { //v3.0
 							<li><a href="http://www.gamecareerguide.com/careers/"><img src="http://www.gamecareerguide.com/img/careers_off.jpg" alt="careers" width="58" height="20" id="Image4" onmouseover="MM_swapImage('Image4','','http://www.gamecareerguide.com/img/careers_on.jpg',1)" onmouseout="MM_swapImgRestore()"></a></li>
 							<li><a href="http://www.gamecareerguide.com/forums/"><img src="http://www.gamecareerguide.com/img/community_off.jpg" alt="community" id="Image5" onmouseover="MM_swapImage('Image5','','http://www.gamecareerguide.com/img/community_on.jpg',1)" onmouseout="MM_swapImgRestore()"></a></li>
 							<li><a href="http://store.cmpgame.com/category.php?cat=4&amp;skin=gamecareer"><img src="http://www.gamecareerguide.com/img/store_off.jpg" alt="store" id="Image6" onmouseover="MM_swapImage('Image6','','http://www.gamecareerguide.com/img/store_on.jpg',1)" onmouseout="MM_swapImgRestore()"></a></li>
-							<li><a href="http://www.gamecareerguide.com/contactus/"><img src="http://www.gamecareerguide.com/img/contactus_off.gif" alt="contactus" id="Image7" onmouseover="MM_swapImage('Image7','','http://www.gamecareerguide.com/img/contactus_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></li>
+							<li><a href="http://www.cmpgame.com/online/gamecareerguide.html"><img src="http://www.gamecareerguide.com/img/advertise_off.gif" alt="advertise" id="Image7" onmouseover="MM_swapImage('Image7','','http://www.gamecareerguide.com/img/advertise_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></li>
+							<li><a href="http://www.gamecareerguide.com/contactus/"><img src="http://www.gamecareerguide.com/img/contactus_off.gif" alt="contactus" id="Image8" onmouseover="MM_swapImage('Image8','','http://www.gamecareerguide.com/img/contactus_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></li>
 						</ul>
 				<div class="maincontent">
 					<div class="topleftcorner"></div><div class="toprightcorner"></div>
