--- a/r/rs/rsm/rsmart.com.html
+++ b/r/rs/rsm/rsmart.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rsmart.com privacy policy that was archived on 2007-02-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070209174324id_/http%3A//www.rsmart.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rsmart.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231160337id_/http%3A//www.rsmart.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 <title>Privacy Policy | rSmart</title>
@@ -21,24 +21,25 @@
 		
 			</div>
 		<div id="secondarytop">
-	<a href="/contact" title="">Contact Us</a> | <a href="/newsletter/subscribe" title="">Newsletter Signup</a> | <a href="http://rsn.rsmart.com" title="">Client Login</a> | <a href="/blog" title="">Blog</a>	</div>
-		<form action="/privacy" method="post" id="search_theme_form">
+	<a href="/contact">Contact Us</a> | <a href="/newsletter/subscribe">Newsletter Signup</a> | <a href="http://rsn.rsmart.com">Client Login</a> | <a href="http://coppola.rsmart.com/">Blog</a>	</div>
+		<form action="/search/node" method="post" id="search_theme_form">
 <div><div id="search" class="container-inline"><div class="form-item">
  <input type="text" maxlength="128" name="edit[search_theme_form_keys]" id="edit-search_theme_form_keys" size="15" value="" title="Enter the terms you wish to search for." class="form-text">
 </div>
 <input type="submit" name="op" value="Search" class="form-submit">
-<input type="hidden" name="edit[form_id]" id="edit-form_id" value="search_theme_form">
+<input type="hidden" name="edit[form_id]" id="edit-search-theme-form" value="search_theme_form">
 </div>
 </div></form>
 </div>
 	<ul id="primarytop">
-			<li><a href="/" title="">Home</a></li>
-			<li><a href="/products/cle" title="">Products</a></li>
-			<li><a href="/why/value" title="">Why rSmart</a></li>
-			<li><a href="/community" title="">Open Source Community</a></li>
-			<li><a href="/about" title="">About Us</a></li>
-			<li><a href="/news-and-events" title="">News and Events</a></li>
-			<li><a href="/client/support/network" title="">Client Support</a></li>
+			<li><a href="/">Home</a></li>
+			<li><a href="/products/cle">Products</a></li>
+			<li><a href="/why/value">Why rSmart</a></li>
+			<li><a href="/community">Open Source Community</a></li>
+			<li><a href="/about">About Us</a></li>
+			<li><a href="/news-and-events">News / Events</a></li>
+			<li><a href="/partners/partners">Partners</a></li>
+			<li><a href="/client/support/network">Support</a></li>
 		</ul>
 			<div class="sectionhead" id="section-privacy">
 			</div>
@@ -50,14 +51,14 @@
   <div class="content">
     <h3><span class="title">Privacy Statement</span> </h3>
 <p>               The rSmart Group recognizes and respects the privacy interests                of its users. The rSmart Group is committed to protecting that                privacy and keeping users informed about our privacy policy.               </p>
-<p><span class="title">What is covered by this Privacy Statement:</span><br>               <a href="#exceptions">The rSmart Group privacy policy and its exceptions</a><br>               <a href="#what">What do we collect?</a><br>               <a href="#why">Why do we collect this data?</a><br>               <a href="#how">How is my personal information used?</a><br>                <a href="#who">Who else gets to see my information?</a><br>               <a href="#safe">How do I know my information is safe with you?</a><br>               <a href="#cookies">Does The rSmart Group use cookies?</a><br>               <a href="#websites">Links</a><br>               <a href="#questions">Questions</a> </p>
+<p><span class="title">What is covered by this Privacy Statement:</span><br>               <a href="#exceptions">The rSmart Group privacy policy and its exceptions</a><br>               <a href="#what">What do we collect?</a><br>               <a href="#why">Why do we collect this data?</a><br>               <a href="#how">How is my personal information used?</a><br>                <a href="#who">Who else gets to see my information?</a><br>               <a href="#safe">How do I know my information is safe with you?</a><br>               <a href="#cookies">Does The rSmart Group use cookies?</a><br>               <a href="#websites">Links</a><br>               <a href="#questions">Questions</a> </p><p></p>
 <h4><span class="title"><a name="exceptions" title="exceptions"></a>The rSmart Group Privacy                Statement and its exceptions</span> </h4>
 <p>               Except as set forth below, the personally identifiable data you                submit to The rSmart Group is not made available or distributed                to third parties, except with your express consent and at your direction.                In particular, The rSmart Group will not give, sell or provide                access to your personal information to any company, individual or                organization for its use in marketing or commercial solicitation                or for any other purpose, except as is necessary for the operation                of this site. </p>
-<p>               <strong><span class="title">Exceptions to the Privacy Policy</span> </strong><br>               There are limited exceptions to the The rSmart Group privacy policy.                When required by law to comply with any valid legal process such                as a search warrant, subpoena, statute, regulation or court order,                The rSmart Group will supply such information as that organization                reasonably determines, based on the advice of counsel, it is legally                required to supply. In addition, The rSmart Group may release specific                information relevant to special cases, such as a physical threat                to you or others or an attempted breach of security on the The rSmart Group site. </p>
+<p>               <strong><span class="title">Exceptions to the Privacy Policy</span> </strong><br>               There are limited exceptions to the The rSmart Group privacy policy.                When required by law to comply with any valid legal process such                as a search warrant, subpoena, statute, regulation or court order,                The rSmart Group will supply such information as that organization                reasonably determines, based on the advice of counsel, it is legally                required to supply. In addition, The rSmart Group may release specific                information relevant to special cases, such as a physical threat                to you or others or an attempted breach of security on the The rSmart Group site. </p><p></p>
 <h4><span class="title"><a name="what" title="what"></a>What do we collect?</span>                </h4>
-<p>               The rSmart Group may collect personal identifying information from                you; including your name, e-mail address, telephone number,                and such additional information as required to communicate with                you in repsonse to form completion. </p>
+<p>               The rSmart Group may collect personal identifying information from                you; including your name, e-mail address, telephone number,                and such additional information as required to communicate with                you in repsonse to form completion. </p><p></p>
 <h4><span class="title"><a name="why" title="why"></a>Why do we collect this data?</span>                </h4>
-<p>               The rSmart Group collects personal to enable The rSmart Group                to respond to your questions or contact you when necessary in connection                with The rSmart Group products or services. </p>
+<p>               The rSmart Group collects personal to enable The rSmart Group                to respond to your questions or contact you when necessary in connection                with The rSmart Group products or services. </p><p></p>
 <h4><span class="title"><a name="how" title="how"></a>How is my personal information                used?</span> </h4>
 <p>               The rSmart Group will use your personal identifying information                to automatically fill out forms and surveys upon your instructions                to do so. </p>
 <p>               <span class="title">Your personal identifying information may also                be used for the following purposes:</span>              </p>
@@ -91,13 +92,16 @@
 	<div id="footer">
     © 2006 The rSmart Group <a href="/privacy">Privacy Policy</a>
 |
-	<div id="secondaryfoot">
-		<a href="/contact" title="">Contact Us</a> | <a href="/newsletter/subscribe" title="">Newsletter Signup</a> | <a href="http://rsn.rsmart.com" title="">Client Login</a> | <a href="/blog" title="">Blog</a>	</div>
-	<div id="primaryfoot">
-		<a href="/" title="">Home</a> | <a href="/products/cle" title="">Products</a> | <a href="/why/value" title="">Why rSmart</a> | <a href="/community" title="">Open Source Community</a> | <a href="/about" title="">About Us</a> | <a href="/news-and-events" title="">News and Events</a> | <a href="/client/support/network" title="">Client Support</a>	</div>
-	</div>
+ <div id="secondaryfoot">
+  <a href="/contact">Contact Us</a> | <a href="/newsletter/subscribe">Newsletter Signup</a> | <a href="http://rsn.rsmart.com">Client Login</a> | <a href="http://coppola.rsmart.com/">Blog</a> </div>
+ <div id="primaryfoot">
+  <a href="/">Home</a> | <a href="/products/cle">Products</a> | <a href="/why/value">Why rSmart</a> | <a href="/community">Open Source Community</a> | <a href="/about">About Us</a> | <a href="/news-and-events">News / Events</a> | <a href="/partners/partners">Partners</a> | <a href="/client/support/network">Support</a> </div>
+ </div>
 </div><!-- contentwrap -->
 </div><!-- constrain -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript"> _uacct = "UA-293314-22"; urchinTracker(); </script>
+
 
 
 </body></html>
