--- a/s/sy/syn/syndetics.com.html
+++ b/s/sy/syn/syndetics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the syndetics.com privacy policy that was archived on 2007-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070609110059id_/http%3A//www.bowker.com/company/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the syndetics.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231162629id_/http%3A//www.bowker.com/company/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/inside.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -34,7 +34,7 @@
 		<td height="65" align="LEFT" valign="bottom">
 			<table width="754" border="0" cellspacing="0" cellpadding="0">
 				<tbody><tr>
-					<td width="150" align="left" valign="middle"><a href="../index.htm"><img src="../images/logo2-bowker-150x47.gif" alt="Bowker" width="150" height="47" border="0"></a></td>
+					<td width="150" align="left" valign="middle"><a href="../index.htm"><img src="../images/Bowker_160x49_topLeft.gif" alt="Bowker" width="160" height="49" border="0"></a></td>
 					<td height="60" align="CENTER" valign="middle"><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><a href="../index.htm">RETURN TO<br>
 				HOMEPAGE</a></font></td>
 					<td width="200" align="right" valign="MIDDLE">
@@ -63,15 +63,15 @@
 	<tr>
 		<td height="25" align="LEFT" valign="middle">
 			<noscript>
-			<TABLE WIDTH="754" BORDER="0" CELLSPACING="1" CELLPADDING="0">
-				<TR ALIGN="CENTER" VALIGN="MIDDLE" BGCOLOR="#336699">
-					<TD HEIGHT="18"><B><FONT SIZE="2" FACE="Georgia, Times New Roman, Times, serif"><A HREF="../products/index.htm"><FONT COLOR="#FFFFFF">Products &amp; Services</FONT></A></FONT></B></TD>
-					<TD HEIGHT="18"><B><FONT SIZE="2" FACE="Georgia, Times New Roman, Times, serif"><A HREF="index.htm"><FONT COLOR="#FFFFFF">Our Company</FONT></A></FONT></B></TD>
-					<TD HEIGHT="18"><B><FONT SIZE="2" FACE="Georgia, Times New Roman, Times, serif"><A HREF="../brands/index.htm"><FONT COLOR="#FFFFFF">Our Brands</FONT></A></FONT></B></TD>
-					<TD HEIGHT="18"><B><FONT SIZE="2" FACE="Georgia, Times New Roman, Times, serif"><A HREF="../markets/index.htm"><FONT COLOR="#FFFFFF">Our Markets</FONT></A></FONT></B></TD>
-					<TD HEIGHT="18"><B><FONT SIZE="2" FACE="Georgia, Times New Roman, Times, serif"><A HREF="../news/index.htm"><FONT COLOR="#FFFFFF">News Room</FONT></A></FONT></B></TD>
-				</TR>
-			</TABLE>
+			<table width="754" border="0" cellspacing="1" cellpadding="0">
+				<tr align="CENTER" valign="MIDDLE" bgcolor="#336699">
+					<td height="18"><b><font size="2" face="Georgia, Times New Roman, Times, serif"><a href="../products/index.htm"><font color="#FFFFFF">Products &amp; Services</font></a></font></b></td>
+					<td height="18"><b><font size="2" face="Georgia, Times New Roman, Times, serif"><a href="index.htm"><font color="#FFFFFF">Our Company</font></a></font></b></td>
+					<td height="18"><b><font size="2" face="Georgia, Times New Roman, Times, serif"><a href="../brands/index.htm"><font color="#FFFFFF">Our Brands</font></a></font></b></td>
+					<td height="18"><b><font size="2" face="Georgia, Times New Roman, Times, serif"><a href="../markets/index.htm"><font color="#FFFFFF">Our Markets</font></a></font></b></td>
+					<td height="18"><b><font size="2" face="Georgia, Times New Roman, Times, serif"><a href="../news/index.htm"><font color="#FFFFFF">News Room</font></a></font></b></td>
+				</tr>
+			</table>
 			</noscript>
 	</td>
 	</tr>
