aweber.com (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 1237,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.75,
  "homepage_snapshot_redirected_domain": "aweber.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001014835id_/http://www.aweber.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001014835id_/http%3A//aweber.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "aweber.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231162840id_/http%3A//www.aweber.com/privacy-policy.htm",
  "policy_title": "Privacy Policy - AWeber Communications, Inc.",
  "policy_url": "aweber.com/privacy-policy.htm",
  "sha1": "fc3d9f4b5fa161a3fa043bde758ca20cf75b4336",
  "simhash": 143392701661303453,
  "simhash_updated": true,
  "site_hostname": "aweber.com",
  "site_url": "http://aweber.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20071231162840",
  "word_count": 187,
  "year": 2007
}

--- a/a/aw/awe/aweber.com.html
+++ b/a/aw/awe/aweber.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aweber.com privacy policy that was archived on 2007-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070625075903id_/http%3A//www.aweber.com/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aweber.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231162840id_/http%3A//www.aweber.com/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy - AWeber Communications, Inc.</title>
@@ -14,7 +14,7 @@
 <body>
 
 <!-- IndexTools Code v3.01 - All rights reserved -->
-<script type="text/javascript" src="http://www.aweber.com/js/indextools.js"></script><noscript>
+<script type="text/javascript" src="/js/indextools.js"></script><noscript>
 <img src="http://stats.indextools.com/p.pl?a=1000619435433&amp;js=no" width="1" height="1" alt="Tracking" /></noscript><!--//-->
 <!-- End of IndexTools Code -->
 <!-- Goog Analytics -->
@@ -29,7 +29,7 @@ urchinTracker();
 
 <div id="header-wrap"><!-- Nav Wrapper -->
 <!-- logo -->
-<div id="logo"><a href="https://www.aweber.com/"><img src="/img/global/logo.gif" alt="AWeber logo"></a></div>
+<div id="logo"><a href="https://www.aweber.com/?id=288959"><img src="/img/global/logo.gif" alt="AWeber logo"></a></div>
 
 
 
@@ -41,7 +41,7 @@ urchinTracker();
 
 <input type="submit" class="searchbox-button" value="Search" alt="search">
 
-<a href="http://www.aweber.com/login.htm" class="login-link">Customer &amp; Affiliate Login</a>
+<a href="http://www.aweber.com/login.htm?id=288959" class="login-link">Customer &amp; Affiliate Login</a>
 
 </form>
 
@@ -54,51 +54,51 @@ urchinTracker();
 <!-- nav -->
 <ul id="nav">
 
-<li class="main"><a href="http://www.aweber.com/">Home</a></li>
+<li class="main"><a href="http://www.aweber.com/?id=288959">Home</a></li>
 
-<li class="main"><a href="http://www.aweber.com/features.htm">Features</a>
+<li class="main"><a href="http://www.aweber.com/features.htm?id=288959">Features</a>
 <ul>
-<li><a href="http://www.aweber.com/features.htm" title="Features of Autoresponders &amp; Newsletters">Features</a></li>
-<li><a href="http://www.aweber.com/benefits.htm" title="Benefits of Using Autoresponders">Benefits</a></li>
-<li><a href="http://www.aweber.com/demo.htm" title="Screenshots of Autoresponders in Action">Demo</a></li>
-<li><a href="http://www.aweber.com/pricing.htm" title="Pricing Value Better than any Competitor">Pricing</a></li>
-<li><a href="http://www.aweber.com/testimonials.htm" title="Success Stories">Testimonials</a></li>
-<li><a href="https://www.aweber.com/order.htm" title="Setup Instantly">Order</a></li>
+<li><a href="http://www.aweber.com/features.htm?id=288959" title="Features of Autoresponders &amp; Newsletters">Features</a></li>
+<li><a href="http://www.aweber.com/benefits.htm?id=288959" title="Benefits of Using Autoresponders">Benefits</a></li>
+<li><a href="http://www.aweber.com/demo.htm?id=288959" title="Screenshots of Autoresponders in Action">Demo</a></li>
+<li><a href="http://www.aweber.com/pricing.htm?id=288959" title="Pricing Value Better than any Competitor">Pricing</a></li>
+<li><a href="http://www.aweber.com/testimonials.htm?id=288959" title="Success Stories">Testimonials</a></li>
+<li><a href="https://www.aweber.com/order.htm?id=288959" title="Setup Instantly">Order</a></li>
 </ul>
 </li>
 
-<li class="main"><a href="http://www.aweber.com/partners.htm">Partners</a>
+<li class="main"><a href="http://www.aweber.com/partners.htm?id=288959">Partners</a>
 <ul>
-<li><a href="http://www.aweber.com/affiliates.htm">Affiliates</a></li>
-<li><a href="https://www.aweber.com/signup.htm">Affiliate Sign Up</a></li>
-<li><a href="http://www.aweber.com/private-label.htm">Private Label</a></li>
+<li><a href="http://www.aweber.com/affiliates.htm?id=288959">Affiliates</a></li>
+<li><a href="https://www.aweber.com/signup.htm?id=288959">Affiliate Sign Up</a></li>
+<li><a href="http://www.aweber.com/private-label.htm?id=288959">Private Label</a></li>
 </ul>
 </li>
 
-<li class="main"><a href="http://www.aweber.com/support.htm">Support</a>
+<li class="main"><a href="http://www.aweber.com/support.htm?id=288959">Support</a>
 <ul>
-<li><a href="http://www.aweber.com/support.htm">Trouble Tickets</a></li>
-<li><a href="http://www.aweber.com/faq.htm">Knowledge Base</a></li>
-<li><a href="http://www.aweber.com/blog/">Blog</a></li>
-<li><a href="http://www.aweber.com/articles.htm">Articles</a></li>
-<li><a href="http://www.aweber.com/video-tutorials.htm">Video Tutorials</a></li>
-<li><a href="http://www.aweber.com/glossary.htm">Glossary of Terms</a></li>
+<li><a href="http://www.aweber.com/support.htm?id=288959">Trouble Tickets</a></li>
+<li><a href="http://www.aweber.com/faq.htm?id=288959">Knowledge Base</a></li>
+<li><a href="http://www.aweber.com/blog/?id=288959">Blog</a></li>
+<li><a href="http://www.aweber.com/articles.htm?id=288959">Articles</a></li>
+<li><a href="http://www.aweber.com/video-tutorials.htm?id=288959">Video Tutorials</a></li>
+<li><a href="http://www.aweber.com/glossary.htm?id=288959">Glossary of Terms</a></li>
 </ul>
 </li>
 
-<li class="main"><a href="http://www.aweber.com/company-overview.htm">About Us</a>
+<li class="main"><a href="http://www.aweber.com/company-overview.htm?id=288959">About Us</a>
 <ul>
-<li><a href="http://www.aweber.com/company-overview.htm">Company Overview</a></li>
-<li><a href="http://www.aweber.com/contact-us.htm">Contact Us</a></li>
-<li><a href="http://www.aweber.com/sitemap.htm">Site Map</a></li>
-<li><a href="http://www.aweber.com/careers.htm">Careers</a></li>
-<li><a href="http://www.aweber.com/privacy-policy.htm">Privacy Policy</a></li>
-<li><a href="http://www.aweber.com/antispam-policy.htm">Anti-Spam Policy</a></li>
-<li><a href="http://www.aweber.com/service-agreement.htm">Terms &amp; Conditions</a></li>
+<li><a href="http://www.aweber.com/company-overview.htm?id=288959">Company Overview</a></li>
+<li><a href="http://www.aweber.com/contact-us.htm?id=288959">Contact Us</a></li>
+<li><a href="http://www.aweber.com/sitemap.htm?id=288959">Site Map</a></li>
+<li><a href="http://www.aweber.com/careers.htm?id=288959">Careers</a></li>
+<li><a href="http://www.aweber.com/privacy-policy.htm?id=288959">Privacy Policy</a></li>
+<li><a href="http://www.aweber.com/antispam-policy.htm?id=288959">Anti-Spam Policy</a></li>
+<li><a href="http://www.aweber.com/service-agreement.htm?id=288959">Terms &amp; Conditions</a></li>
 </ul>
 </li>
 
-<li class="main"><a href="https://www.aweber.com/order.htm">Order</a></li>
+<li class="main"><a href="https://www.aweber.com/order.htm?id=288959">Order</a></li>
 
 </ul>
 
@@ -121,7 +121,7 @@ urchinTracker();
 <script type="text/javascript" src="http://www.aweber.com/livesupport/js/status_image.php?base_url=http://www.aweber.com/livesupport&amp;l=support&amp;x=1&amp;deptid=1&amp;loginname=*PROSPECT*&amp;"></script>
 <!-- END PHP Live -->
 <br>
-<strong>7AM-7PM ET Mon-Fri &amp; 9AM-5PM Sat</strong><br>
+<strong>8AM-8PM ET Mon-Fri &amp; 9AM-5PM Sat</strong><br>
 <br>
 </div>
 </div>
@@ -134,13 +134,13 @@ urchinTracker();
 <div id="nav-links">
 
 <div class="links">
-<a href="company-overview.htm">•&nbsp; Company Overview</a>
-<a href="contact-us.htm">•&nbsp; Contact Us</a>
-<a href="sitemap.htm">•&nbsp; Site Map</a>
-<a href="careers.htm">•&nbsp; Careers</a>
-<a href="privacy-policy.htm">•&nbsp; Privacy Policy</a>
-<a href="antispam-policy.htm">•&nbsp; Anti-Spam Policy</a>
-<a href="service-agreement.htm">•&nbsp; Terms &amp; Conditions</a>
+<a href="company-overview.htm?id=288959">•&nbsp; Company Overview</a>
+<a href="contact-us.htm?id=288959">•&nbsp; Contact Us</a>
+<a href="sitemap.htm?id=288959">•&nbsp; Site Map</a>
+<a href="careers.htm?id=288959">•&nbsp; Careers</a>
+<a href="privacy-policy.htm?id=288959">•&nbsp; Privacy Policy</a>
+<a href="antispam-policy.htm?id=288959">•&nbsp; Anti-Spam Policy</a>
+<a href="service-agreement.htm?id=288959">•&nbsp; Terms &amp; Conditions</a>
 </div>
 
 </div>
@@ -158,9 +158,9 @@ urchinTracker();
 
 
 <!-- Privacy -->
-<a href="index.htm">Home</a> &gt; 
-<a href="company-overview.htm">About Us</a> &gt; 
-<a href="privacy-policy.htm">Privacy Policy</a>
+<a href="index.htm?id=288959">Home</a> &gt; 
+<a href="company-overview.htm?id=288959">About Us</a> &gt; 
+<a href="privacy-policy.htm?id=288959">Privacy Policy</a>
 <br>
 
 <h1>Privacy Policy</h1>
@@ -170,7 +170,7 @@ urchinTracker();
 <br>
 <br>
 
-Please direct questions regarding this statement to AWeber's excellent Customer Support staff - .
+Please direct questions regarding this statement to AWeber's excellent <a href="/support.htm">Customer Support team</a>.
 <br>
 <br>
  
@@ -195,33 +195,35 @@ All AWeber Affiliate information, including address, phone number, e-mail addres
 
 <div id="footer-wrap-menu">
 <strong>
-<a href="http://www.aweber.com/">Home</a> | 
-<a href="http://www.aweber.com/features.htm">Features</a> | 
-<a href="http://www.aweber.com/affiliates.htm">Affiliates</a> | 
-<a href="https://www.aweber.com/order.htm">Order</a> | 
-<a href="http://www.aweber.com/sitemap.htm">Site Map</a> | 
-<a href="http://www.aweber.com/support.htm">Support</a></strong>
+<a href="http://www.aweber.com/?id=288959">Home</a> | 
+<a href="http://www.aweber.com/features.htm?id=288959">Features</a> | 
+<a href="http://www.aweber.com/affiliates.htm?id=288959">Affiliates</a> | 
+<a href="https://www.aweber.com/order.htm?id=288959">Order</a> | 
+<a href="http://www.aweber.com/sitemap.htm?id=288959">Site Map</a> | 
+<a href="http://www.aweber.com/support.htm?id=288959">Support</a></strong>
 </div>
 
 <div id="footer-wrap-left">
 AWeber Communications, Inc.<br>
 2865 S. Eagle Rd. #338<br>
 Newtown, PA 18940-1560, USA<br>
-URL: <a href="http://www.aweber.com/">www.aweber.com</a><br>
-Toll Free: <a href="http://www.aweber.com/contact-us.htm" title="Contact Us">+1 800-531-5065</a><br>
+URL: <a href="http://www.aweber.com/?id=288959">www.aweber.com</a><br>
+Toll Free: <a href="http://www.aweber.com/contact-us.htm?id=288959" title="Contact Us">+1 800-531-5065</a><br>
 </div>
 
 <div id="footer-wrap-right">
 Copyright © 1998-2007 AWeber Communications, Inc.<br>
 Reproduction Strictly Prohibited. All Rights Reserved.<br>
-<a href="http://www.aweber.com/privacy-policy.htm">Privacy Policy</a> | 
-<a href="http://www.aweber.com/antispam-policy.htm">Anti-Spam Policy</a><br>
+<a href="http://www.aweber.com/privacy-policy.htm?id=288959">Privacy Policy</a> | 
+<a href="http://www.aweber.com/antispam-policy.htm?id=288959">Anti-Spam Policy</a><br>
 </div>
 
 </div><!-- /Footer Wrapper -->
 
 
 </div><!-- /Page Wrapper -->
+ 
+<script type="text/javascript" src="http://analytics.aweber.com/js/awt_analytics.js?id=1w"></script>
 
 
 
