--- a/s/sa/sas/sas.com.html
+++ b/s/sa/sas/sas.com.html
@@ -1,13 +1,12 @@
-<!--The following is the downloaded HTML source of the sas.com privacy policy that was archived on 2007-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070624205329id_/http%3A//www.sas.com/Privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sas.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231163904id_/http%3A//www.sas.com/Privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>SAS Institute Inc. | Privacy Statement</title>
 <!-- META INFO BEGINS -->
 <!-- META INFO ENDS -->
 <script language="JavaScript" type="text/javascript" src="/lib/global.js">
-  </script><link rel="stylesheet" href="/lib/sas.css" type="text/css">
-
+  </script>
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script></head>
@@ -20,14 +19,21 @@
   <tbody><tr>
     <td width="384" nowrap=""><img src="/includes/headers/images/spacer.gif" alt="" width="126" height="13"><br><a href="/index.html"><img src="/includes/headers/images/saslogo.gif" alt="SAS" width="126" height="35" border="0"></a><a href="/software/index.html"><img src="/includes/headers/images/mission.gif" alt="SAS | The Leader in Business Intelligence -- Superior Software that gives you The Power to Know" width="258" height="35" border="0"></a></td>
      <td align="right" valign="bottom">
-		<form class="search" action="http://search.sas.com/mainquery.html" method="get"><table><tbody><tr><td width="100%"></td>
+	<!-- begin /includes/headers/searchsection.inc for corporate site -->
+<form class="search" action="http://www.sas.com/search/query.html" method="get">
+<table><tbody><tr><td width="100%"></td>
    <td><input class="searchfield" size="15" name="qt"></td>
-   <td> <input type="image" src="/includes/headers/images/btn_search.gif" size="15" value="Search" border="0" name="Find" align="middle"> <input type="hidden" value="40" name="nh"> 
-      <input type="hidden" value="-url:/offices/ -url:/service/techsup/unotes/ -url://ftp.sas.com/techsup" name="qs"> <input type="hidden" value="extsas" name="qc"> <input type="hidden" value="1" name="ws"> <input type="hidden" value="1" name="qm"> <input type="hidden" value="1" name="st"> <input type="hidden" value="1" name="lk"> <input type="hidden" value="0" name="rf"> <input type="hidden" name="oq"> <input type="hidden" value="0" name="rq"> </td>
-   </tr></tbody></table>
-      </form>
-
-
+   <td><input type="image" src="/includes/headers/images/btn_search.gif" size="15" value="Search" border="0" name="Find" align="middle"> 
+	<input type="hidden" value="10" name="nh"> 
+	<input type="hidden" value="-url:/offices/" name="qs">
+	<input type="hidden" value="extsas" name="qc">
+	<input type="hidden" value="0" name="qm"> 
+	<input type="hidden" value="0" name="rq"> 
+    <input type="hidden" value="0" name="rf">
+   </td>
+</tr></tbody></table>
+</form>
+<!-- end /includes/headers/searchsection.inc for corporate site -->
 </td>
   </tr>
   <tr>
@@ -38,79 +44,82 @@
 </tbody></table>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td nowrap=""><a href="/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('home','','/includes/headers/images/home-over.jpg',1)"><img src="/includes/headers/images/home.jpg" alt="Home" name="home" width="71" height="43" border="0"></a></td><td nowrap=""><a href="/software/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('products','','/includes/headers/images/prod-over.jpg',1)"><img src="/includes/headers/images/prod.jpg" alt="Products and Solutions" name="products" width="143" height="43" border="0"></a></td><td nowrap=""><a href="/success/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('success','','/includes/headers/images/success-over.gif',1)"><img src="/includes/headers/images/success.gif" alt="Success Stories" name="success" width="125" height="43" border="0"></a></td><td nowrap=""><a href="/partners/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('partners','','/includes/headers/images/partners-over.jpg',1)"><img src="/includes/headers/images/partners.jpg" alt="Partners" name="partners" width="73" height="43" border="0"></a></td><td nowrap=""><a href="/corporate/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('company','','/includes/headers/images/company-over.jpg',1)"><img src="/includes/headers/images/company.jpg" alt="Company" name="company" width="69" height="43" border="0"></a></td><td nowrap=""><a href="http://support.sas.com" target="_blank" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('customer','','/includes/headers/images/support-over.gif',1)"><img src="/includes/headers/images/support.gif" alt="Customer Support" name="customer" width="127" height="43" border="0"></a></td>
-    <td width="100%" align="right" valign="middle" background="/includes/headers/images/nav_16.jpg" nowrap="">
-        <form action="/bin/jump.pl" method="get" id="wwpulldown">
-       <select name="jump_list" class="dropNav">
-          <option value="/offices/intro.html" selected="selected">Worldwide Web Sites</option>
- <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Albania</option>
+    <td nowrap=""><a href="/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('home','','/includes/headers/images/home-over.jpg',1)"><img src="/includes/headers/images/home.jpg" alt="Home" name="home" width="71" height="43" border="0"></a></td>
+	<td nowrap=""><a href="/software/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('products','','/includes/headers/images/prod-over.jpg',1)"><img src="/includes/headers/images/prod.jpg" alt="Products and Solutions" name="products" width="143" height="43" border="0"></a></td>
+	<td nowrap=""><a href="/success/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('customers','','/includes/headers/images/customers-over.gif',1)"><img src="/includes/headers/images/customers.gif" alt="Customers" name="customers" width="83" height="43" border="0"></a></td>
+	<td nowrap=""><a href="/partners/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('partners','','/includes/headers/images/partners-over.jpg',1)"><img src="/includes/headers/images/partners.jpg" alt="Partners" name="partners" width="73" height="43" border="0"></a></td>
+	<td nowrap=""><a href="/corporate/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('company','','/includes/headers/images/company-over.jpg',1)"><img src="/includes/headers/images/company.jpg" alt="Company" name="company" width="69" height="43" border="0"></a></td>
+	<td nowrap=""><a href="http://support.sas.com" target="_blank" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('customer','','/includes/headers/images/support-over.gif',1)"><img src="/includes/headers/images/support.gif" alt="Customer Support" name="customer" width="127" height="43" border="0"></a></td>
+
+
+<!-- COUNTRY LIST INCLUDE BEGINS -->
+<!--stopindex-->
+<td width="100%" align="right" valign="middle" background="/includes/headers/images/nav_16.jpg" nowrap="">
+<form action="/bin/jump.pl" method="get" id="wwpulldown">
+ <select name="jump_list" class="dropNav">
+  <option value="/offices/intro.html" selected="selected">Worldwide Web Sites</option>
+  <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Albania</option>
   <option value="/offices/latinamerica/argentina/">&nbsp;&nbsp;&nbsp;&nbsp;Argentina</option>
   <option value="/offices/asiapacific/sp/">&nbsp;&nbsp;&nbsp;&nbsp;Australia</option>
   <option value="/offices/europe/austria/">&nbsp;&nbsp;&nbsp;&nbsp;Austria</option>
   <option value="/offices/europe/belux/">&nbsp;&nbsp;&nbsp;&nbsp;Belgium &amp;</option>
-
   <option value="/offices/europe/belux/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Luxembourg</option>
-   <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Bosnia &amp;</option>
-   <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Herzegovina</option>
+  <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Bosnia &amp;</option>
+  <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Herzegovina</option>
   <option value="/offices/latinamerica/brazil/">&nbsp;&nbsp;&nbsp;&nbsp;Brazil</option>
-
   <option value="/offices/NA/canada/">&nbsp;&nbsp;&nbsp;&nbsp;Canada</option>
   <option value="/offices/latinamerica/chile/">&nbsp;&nbsp;&nbsp;&nbsp;Chile</option>
   <option value="/offices/asiapacific/china/">&nbsp;&nbsp;&nbsp;&nbsp;China</option>
   <option value="/offices/latinamerica/andean/">&nbsp;&nbsp;&nbsp;&nbsp;Colombia</option>
-<option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Croatia</option>
+  <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Croatia</option>
   <option value="/offices/europe/czech/">&nbsp;&nbsp;&nbsp;&nbsp;Czech Republic</option>
   <option value="/offices/europe/denmark/">&nbsp;&nbsp;&nbsp;&nbsp;Denmark</option>
-
   <option value="/offices/europe/finland/">&nbsp;&nbsp;&nbsp;&nbsp;Finland</option>
   <option value="/offices/europe/france/">&nbsp;&nbsp;&nbsp;&nbsp;France</option>
   <option value="/offices/europe/germany/">&nbsp;&nbsp;&nbsp;&nbsp;Germany</option>
   <option value="/offices/asiapacific/hongkong/">&nbsp;&nbsp;&nbsp;&nbsp;Hong Kong</option>
-
   <option value="/offices/europe/hungary/">&nbsp;&nbsp;&nbsp;&nbsp;Hungary</option>
   <option value="/offices/asiapacific/india/">&nbsp;&nbsp;&nbsp;&nbsp;India</option>
-
   <option value="/offices/europe/ireland/">&nbsp;&nbsp;&nbsp;&nbsp;Ireland</option>
   <option value="/offices/europe/italy/">&nbsp;&nbsp;&nbsp;&nbsp;Italy</option>
   <option value="/offices/asiapacific/japan/">&nbsp;&nbsp;&nbsp;&nbsp;Japan</option>
   <option value="/offices/asiapacific/korea/">&nbsp;&nbsp;&nbsp;&nbsp;Korea</option>
- <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Macedonia</option>
+  <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Macedonia</option>
   <option value="/offices/asiapacific/malaysia/">&nbsp;&nbsp;&nbsp;&nbsp;Malaysia</option>
   <option value="/offices/latinamerica/mexico/">&nbsp;&nbsp;&nbsp;&nbsp;Mexico</option>
- <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Montenegro</option>
+  <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Montenegro</option>
   <option value="/offices/europe/netherlands/">&nbsp;&nbsp;&nbsp;&nbsp;Netherlands</option>
   <option value="/offices/asiapacific/sp/">&nbsp;&nbsp;&nbsp;&nbsp;New Zealand</option>
   <option value="/offices/europe/norway/">&nbsp;&nbsp;&nbsp;&nbsp;Norway</option>
-   <option value="/offices/asiapacific/pakistan/">&nbsp;&nbsp;&nbsp;&nbsp;Pakistan</option>
-   <option value="/offices/latinamerica/andean/">&nbsp;&nbsp;&nbsp;&nbsp;Peru</option>
-
-   <option value="/offices/asiapacific/philippines/">&nbsp;&nbsp;&nbsp;&nbsp;Philippines</option>
+  <option value="/offices/asiapacific/pakistan/">&nbsp;&nbsp;&nbsp;&nbsp;Pakistan</option>
+  <option value="/offices/latinamerica/andean/">&nbsp;&nbsp;&nbsp;&nbsp;Peru</option>
+  <option value="/offices/asiapacific/philippines/">&nbsp;&nbsp;&nbsp;&nbsp;Philippines</option>
   <option value="/offices/europe/poland/">&nbsp;&nbsp;&nbsp;&nbsp;Poland</option>
   <option value="/offices/europe/portugal/">&nbsp;&nbsp;&nbsp;&nbsp;Portugal</option>
-
   <option value="/offices/europe/russia/">&nbsp;&nbsp;&nbsp;&nbsp;Russia</option>
-    <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Serbia</option>
+  <option value="/offices/europe/adriatic/">&nbsp;&nbsp;&nbsp;&nbsp;Serbia</option>
   <option value="/offices/asiapacific/singapore/">&nbsp;&nbsp;&nbsp;&nbsp;Singapore</option>
   <option value="/offices/europe/slovakia/">&nbsp;&nbsp;&nbsp;&nbsp;Slovakia</option>
-
   <option value="/offices/europe/slovenia/">&nbsp;&nbsp;&nbsp;&nbsp;Slovenia</option>
   <option value="/offices/africa/southafrica/">&nbsp;&nbsp;&nbsp;&nbsp;South Africa</option>
   <option value="/offices/europe/spain/">&nbsp;&nbsp;&nbsp;&nbsp;Spain</option>
-
   <option value="/offices/europe/sweden/">&nbsp;&nbsp;&nbsp;&nbsp;Sweden</option>
   <option value="/offices/europe/switzerland/">&nbsp;&nbsp;&nbsp;&nbsp;Switzerland</option>
   <option value="/offices/asiapacific/taiwan/">&nbsp;&nbsp;&nbsp;&nbsp;Taiwan</option>
-
   <option value="/offices/asiapacific/thailand/">&nbsp;&nbsp;&nbsp;&nbsp;Thailand</option>
   <option value="/offices/europe/turkey/">&nbsp;&nbsp;&nbsp;&nbsp;Turkey</option>
+    <option value="/offices/me/">&nbsp;&nbsp;&nbsp;&nbsp;UAE</option>
   <option value="/offices/europe/uk/">&nbsp;&nbsp;&nbsp;&nbsp;United Kingdom</option>
-
-   <option value="/offices/latinamerica/andean/">&nbsp;&nbsp;&nbsp;&nbsp;Venezuela</option>
+  <option value="/offices/latinamerica/andean/">&nbsp;&nbsp;&nbsp;&nbsp;Venezuela</option>
 </select>
-                <input name="image" type="image" src="/includes/headers/images/go.gif" alt="Go" align="middle" border="0">
+<input name="image" type="image" src="/includes/headers/images/go.gif" alt="Go" align="middle" border="0">
+</form></td>
+<td width="22" valign="bottom" background="/includes/headers/images/nav_16.jpg">
+</td>
 
-    </form></td>
-        <td width="22" valign="bottom" background="/includes/headers/images/nav_16.jpg"></td>
+<!--startindex-->		
+<!-- COUNTRY LIST INCLUDE ENDS -->
+		
 
   </tr>
 </tbody></table>
@@ -377,7 +386,7 @@ ATTN:  Legal Division / Privacy Manager
 <!-- turn on Metaverse menu for Alt-RightClick  -->
 <!-- commented out by edds 22oct2004 -->
 <!-- include virtual="/misc/testing/lib/mv-cmenu-test.inc"  -->
-<script language="Javascript" src="/lib/itvsasid.js"></script><img src="/lib/itvsasid.gif?rndm=1580635684666&amp;sasitvid=00000000&amp;whd=800x600@24&amp;ttl=SAS%20Institute%20Inc.%20%7C%20Privacy%20Statement&amp;url=https%3A//web.archive.org/web/20070624205329id_/http%253A//www.sas.com/Privacy.html&amp;ref=" width="1" height="1" border="0">
+<script language="Javascript" src="/lib/itvsasid.js"></script><img src="/lib/itvsasid.gif?rndm=1580496884246&amp;sasitvid=00000000&amp;whd=800x600@24&amp;ttl=SAS%20Institute%20Inc.%20%7C%20Privacy%20Statement&amp;url=https%3A//web.archive.org/web/20071231163904id_/http%253A//www.sas.com/Privacy.html&amp;ref=" width="1" height="1" border="0">
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
  <tbody><tr>
